force-app/main/default/objects/Chapter_in_Topic__c/Chapter_in_Topic__c.object-meta.xml
<CustomObject>
    <label>Chapter in Topic</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Chapter in Topic #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapters in Topic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>