force-app/main/default/objects/Chapter_in_Topic__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <label>Chapter</label>
    <referenceTo>Chapter__c</referenceTo>
    <relationshipLabel>Chapters in Topic</relationshipLabel>
    <relationshipName>Chapters_in_Topic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>