force-app/main/default/objects/Chapter_in_Topic__c/fields/Chapter_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Full_Name__c</fullName>
    <formula>Chapter__r.Chapter_Full_Name__c</formula>
    <label>Chapter Full Name</label>
    <type>Text</type>
</CustomField>