force-app/main/default/objects/Chapter_in_Topic__c/fields/Topic_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Full_Name__c</fullName>
    <formula>Topic__r.Topic_full_name__c</formula>
    <label>Topic Full Name</label>
    <type>Text</type>
</CustomField>